--- a/src/main/resources/templates/portal/iv/board/popup/view2.html
+++ b/src/main/resources/templates/portal/iv/board/popup/view2.html
@@ -2,12 +2,34 @@
 <html
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
+<head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.8/semantic.min.css"/>
+<link rel="stylesheet" type="text/css" th:href="@{/portal/css/layout/iv/hq/parts/popup/basic.css}" />
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script th:src="@{/portal/js/jquery/jquery.cookie.js}"></script>
+<script th:src="@{/editor_html5/js/xfe_main.js}"></script>
+<style>
+.pop-bottom {
+	height:45px;
+	padding: 10px 5px 5px 10px;
+	background-color: #000;	
+}
+</style>
+</head>	
 <body style="overflow: hidden; margin:0; padding:0;">
 <div id="xfe"></div>
+<div id="bottom" class="pop-bottom">	
+	<input type="checkbox" class="custom-ui" checked/> <label th:text="#{HQP_T_NOT_SHOW_POPUP_A_DAY}"></label>
+	<div style="float: right;"><button id="BTN_close" type="button" th:text="#{HQP_B_CLOSE}"></button></div>	
+</div>
 <textarea id="htmlContent" th:text="${boardContent?.htmlContent}" style="display:none;"></textarea>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script th:src="@{/editor_html5/js/xfe_main.js}"></script>
 <script>
+$(window).on("load", function() {
+	let height = [[${boardContent.height}]] - $("#bottom").outerHeight(true);
+	$("#xfe").height(height);
+});
+
 /*
  * 에디터 생성.
  * 
@@ -29,9 +51,15 @@ let xfe = new XFE({
 
 xfe.render("xfe");
 
-$(window).on("load", function() {
-	$("#xfe").height([[${boardContent.height}]]);
+$("#BTN_close").on("click", function() {
+	if ($("input[type=checkbox]:checked"))
+	{
+		$.cookie("[[${boardContent.bcSeq}]]", "Y", {expires: 1 /*유효 기간(일 단위 기준)*/, path: "/"});
+	};
+	
+	window.close();
 });
+
 </script>
 </body>
 </html>
