--- a/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/js.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/js.html
@@ -8,6 +8,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/min/dropzone.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
 <!-- custom javascript library -->
 <script th:src="@{/portal/js/jWebppy.utils.object.js}"></script>
