--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/report/order/order_type/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/report/order/order_type/list.html
@@ -16,49 +16,49 @@
 	<div class="block-header">
 		<div class="block-title" th:text="#{HQP_T_PARTS_ORDER_REPORT}"></div>
 		<div class="block-button-area">
-			<button id="BTN_search" type="button" th:text="#{HQP_B_SEARCH}"></button>
+			<!-- button id="BTN_search" type="button" th:text="#{HQP_B_SEARCH}"></button -->
 		</div>
 	</div>
 	<div class="split-row"></div>
-	
+
 	<div class="condition-area">
-	<form id="FORM_search" name="FORM_search">
-		<table class="condition table-fixed">
-			<tbody>
-				<tr>
-					<th th:text="#{HQP_L_TYPE}"></th>
-					<td>
-						<div class="input-area">
-							<select id="type" name="type" class="custom-ui">
-								<option value="monthly">Monthly Based</option>
-								<option value="order_type" selected>Order Type</option>
-							</select>
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<th th:text="#{HQP_L_YEAR}"></th>
-					<td>
-						<div class="input-area">
-							<select id="pYear" name="pYear" class="custom_ui">
-								<option th:each="year: ${#numbers.sequence(pYear, pYear-1)}" th:value="${year}" th:text="${year}"></option>
-							</select>
-						</div>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-	</form>
+		<form id="FORM_search" name="FORM_search">
+			<table class="condition table-fixed">
+				<tbody>
+					<tr>
+						<th th:text="#{HQP_L_YEAR}"></th>
+						<td>
+							<div class="input-area">
+								<select id="pYear" name="pYear" class="custom_ui">
+									<option th:each="year: ${#numbers.sequence(thisYear, thisYear-1)}" th:value="${year}" th:text="${year}" th:selected="${year}==${pYear}"></option>
+								</select>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<th th:text="#{HQP_L_TYPE}"></th>
+						<td>
+							<div class="input-area">
+								<select id="type" name="type" class="custom-ui">
+									<option value="monthly" th:text="#{HQP_L_REPORT_TYPE_MONTHLY}"></option>
+									<option value="order_type" selected th:text="#{HQP_L_REPORT_TYPE_ORDER_TYPE}"></option>
+								</select>
+							</div>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</form>
 	</div>	
 	
 	<div class="condition-area">
 		<div class="condition-title right"><span th:text="|#{HQP_L_CURR}:|"></span> <span id="curr"></span></div>
-		<table class="condition table-fixed order-report">
-			<thead>
-				<tr><th>&nbsp;</th></tr>
-			</thead>
-			<tbody></tbody>
-		</table>
+			<table class="condition table-fixed order-report">
+				<thead>
+					<tr><th>&nbsp;</th></tr>
+				</thead>
+				<tbody></tbody>
+			</table>
 	</div>
 	<div id="AREA_chart" style="width:60%; margin: auto; "></div>
 	
@@ -74,6 +74,7 @@ $(document).ready(function() {
 		
 		let thead = [];
 		let tbody = [];
+		let currency;
 		
 		thead.push("<tr><th></th>");
 		
@@ -102,6 +103,13 @@ $(document).ready(function() {
 				tbody.push("<td class='right text' title='" + formattedValue + "'>");
 				tbody.push(formattedValue);
 				tbody.push("</td>");
+				
+				console.log()
+				
+				if (JpUtilsString.isEmpty(currency) && JpUtilsString.isNotEmpty(item2.CURRENCY))
+				{
+					currency = item2.CURRENCY; 
+				};
 			});
 			
 			tbody.push("</tr>");
@@ -110,80 +118,8 @@ $(document).ready(function() {
 		$("table.order-report > thead").html(thead.join(""));
 		$("table.order-report > tbody").html(tbody.join(""));
 		
-		$("#curr").html(data[0][0].CURRENCY);
+		$("#curr").html(currency);
 	};
-	
-	function drawChart(result)
-	{
-		let column = result.BW_COLUMN;
-		let data = result.BW_DATA;
-		let axis = result.BW_AXIS;		
-		
-		let chartData = [];
-		let xAxis = [];
-		
-		$.each(column, function(index, item) {
-			if (index >=1 && index <= 12)
-			{
-				xAxis.push(item.CAPTION);	
-			};
-		});
-		
-		$.each(axis, function(index1, item1) {
-			
-			if (index1 <= 1 || index1 == 3)
-			{
-				let chartColumn = [];
-				chartColumn.push(axis[index1].CAPTION);
-				
-				$.each(data[index1], function(index2, item2) {
-					if (index2 >= 1 && index2 <= 12)
-					{
-						let value = (item2.MWKZ == "%") ? Number(item2.VALUE).toFixed(2) : item2.VALUE;
-						
-						chartColumn.push(value);						
-					};
-				});
-				
-				chartData.push(chartColumn);				
-			};
-		});			
-
-		let chart = c3.generate({
-			bindto: "#AREA_chart",
-			data: {
-				columns: chartData,
-				labels: false
-				/*
-				labels: {
-					format: {
-						Plan: d3.format(","),
-						"Sales Record": d3.format(",")
-					}
-				}
-				*/
-			},
-			axis: {
-				x: {
-					label: {
-						text: "Month",
-						position: "outer-center"
-					},
-					type: "category",
-					categories: xAxis
-				},
-				y: {
-					label: {
-						text: "Order Amount",
-						position: "outer-middle"
-					},
-					tick: {
-						format: d3.format(",")
-					}
-				}
-			}
-		});
-	};	
 	
 	function load()
 	{
@@ -198,7 +134,6 @@ $(document).ready(function() {
 				let result = response.RESULT;
 				
 				drawTable(result);
-				drawChart(result);
 			},
 			complete(jqXHR, textStatus) {
 				ProgressBar.hide();
@@ -215,11 +150,15 @@ $(document).ready(function() {
 		doSearch();
 	});
 	
-	doSearch();
+	$("#pYear").on("change", function() {
+		doSearch();
+	});	
 	
 	$("#type").on("change", function() {
-		document.location.href = "[[${BASE_PATH}]]/report/order/" + $(this).val() + "/list";
-	});	
+		document.location.href = "[[${BASE_PATH}]]/report/order/" + $(this).val() + "/list?pYear=" + $("#pYear").val();
+	});
+	
+	doSearch();
 });
 </script>	
 </th:block>
