정보보안 점검사항 적용

--- a/src/main/resources/templates/portal/iv/board/list.html
+++ b/src/main/resources/templates/portal/iv/board/list.html
@@ -78,8 +78,8 @@ $(function(){
 			{data: "no", 				title: "[[#{HQP_L_NUMBER}]]", "width": "8%"},
 			{data: "displayTitle",		title: "[[#{HQP_L_TITLE}]]"},
 			{data: "writer",			title: "[[#{HQP_L_WRITER}]]", "width": "20%"},
-			{data: "displayRegDate", 	title: "[[#{HQP_L_REG_DATE}]]", "width": "15%"},
-			{data: "views", 			title: "[[#{HQP_L_VIEWS}]]", "width": "8%"}		
+			{data: "displayRegDate2", 	title: "[[#{HQP_L_REG_DATE}]]", "width": "10%"},
+			{data: "views", 			title: "[[#{HQP_L_VIEWS}]]", "width": "10%"}		
 		],
 		columnDefs: [
 			{targets: [1], className: "link"},
