--- a/src/main/resources/templates/portal/iv/survey/list.html
+++ b/src/main/resources/templates/portal/iv/survey/list.html
@@ -69,7 +69,7 @@ $(function(){
 			{data:"fgStatus",		title: "[[#{HQP_L_STATUS}]]", 		"width": "8%"},		// 1
 			{data:"validFrom",		title: "[[#{HQP_L_SURVEY_PERIOD}]]", 	"width": "15%"},	// 2
 			{data:"validTo",		title: "[[#{HQP_L_SURVEY_PERIOD}]]", 	"width": "15%"},	// 3
-			{data:"title", 			title: "[[#{HQP_L_SURVEY_TITLE}]]"},						// 4
+			{data:"displayTitle",	title: "[[#{HQP_L_SURVEY_TITLE}]]"},						// 4
 			{data:"fgOpenResult",	title: "[[#{HQP_L_RESULT}]]", 		"width": "8%"},		// 5
 			{data:"regUsername", 	title: "[[#{HQP_L_WRITER}]]", 		"width": "10%"},	// 6
 			{data:"applier", 		title: "[[#{HQP_L_PARTICIPATE}]]", 		"width": "8%"},		// 7
