--- a/src/main/resources/templates/portal/iv/board/view_inc.html
+++ b/src/main/resources/templates/portal/iv/board/view_inc.html
@@ -26,7 +26,7 @@
 				<th th:text="#{HQP_L_WRITER}"></th>
 				<td th:text="${boardContent.writer}"></td>
 				<th th:text="#{HQP_L_REG_DATE}"></th>
-				<td th:text="${boardContent.displayRegDate}"></td>
+				<td th:text="${boardContent.displayRegDate2}"></td>
 				<th th:text="#{HQP_L_VIEWS}"></th>
 				<td th:text="${boardContent.views}"></td>
 			</tr>
