--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/report/order/order_type/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/report/order/order_type/list.html
@@ -5,14 +5,6 @@
 	layout:decorate="~{portal/layout/iv/hq/parts/common/index}">
 	
 <th:block layout:fragment="content">
-<style>
-.text {
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	word-wrap: normal;
-	overflow: hidden;	
-}
-</style>
 	<div class="block-header">
 		<div class="block-title" th:text="#{HQP_T_PARTS_ORDER_REPORT}"></div>
 		<div class="block-button-area">
@@ -79,7 +71,7 @@ $(document).ready(function() {
 		thead.push("<tr><th></th>");
 		
 		$.each(column, function(index, item) {
-			thead.push("<th class='center text' title='" + item.CAPTION + "'>");
+			thead.push("<th class='center text-ellipsis' title='" + item.CAPTION + "'>");
 			thead.push(item.CAPTION);
 			thead.push("</th>");
 		});
@@ -88,7 +80,7 @@ $(document).ready(function() {
 		
 		$.each(axis, function(index1, item1) {
 			tbody.push("<tr>");
-			tbody.push("<td class='text' title='" + axis[index1].CAPTION + "'>" + axis[index1].CAPTION + "</td>");
+			tbody.push("<td class='text-ellipsis' title='" + axis[index1].CAPTION + "'>" + axis[index1].CAPTION + "</td>");
 			
 			$.each(data[index1], function(index2, item2) {
 				let value = item2.VALUE;
@@ -100,7 +92,7 @@ $(document).ready(function() {
 				
 				let formattedValue = JpUtilsNumber.addComma(value);
 				
-				tbody.push("<td class='right text' title='" + formattedValue + "'>");
+				tbody.push("<td class='right text-ellipsis' title='" + formattedValue + "'>");
 				tbody.push(formattedValue);
 				tbody.push("</td>");
 				
@@ -121,6 +113,77 @@ $(document).ready(function() {
 		$("#curr").html(currency);
 	};
 	
+	function drawChart(result)
+	{
+		let column = result.BW_COLUMN;
+		let data = result.BW_DATA;
+		let axis = result.BW_AXIS;
+		let axisLength = axis.length;
+		
+		let chartData = [];
+		let xAxis = [];
+		let groups = new Array();
+		groups.push(new Array());
+		
+		$.each(column, function(index, item) {
+			if (index >=0 && index <= 11)
+			{
+				xAxis.push(item.CAPTION);	
+			};
+		});
+
+		$.each(axis, function(index1, item1) {
+			
+			if (index1 >= 0 && index1 <= axisLength-4 && index1%2 == 0)
+			{
+				let chartColumn = [];
+				chartColumn.push(axis[index1].CAPTION);
+				
+				$.each(data[index1], function(index2, item2) {
+					if (index2 >= 0 && index2 <= 11)
+					{
+						let value = (item2.MWKZ == "%") ? Number(item2.VALUE).toFixed(2) : item2.VALUE;
+						
+						chartColumn.push(value);						
+					};
+				});
+				
+				chartData.push(chartColumn);
+				
+				groups[0].push(axis[index1].CAPTION);
+			};
+		});			
+
+		let chart = c3.generate({
+			bindto: "#AREA_chart",
+			data: {
+				columns: chartData,
+				labels: false,
+				type: "bar",
+				groups: groups
+			},
+			axis: {
+				x: {
+					label: {
+						text: "Month",
+						position: "outer-center"
+					},
+					type: "category",
+					categories: xAxis
+				},
+				y: {
+					label: {
+						text: "Order Amount",
+						position: "outer-middle"
+					},
+					tick: {
+						format: d3.format(",")
+					}
+				}
+			}
+		});
+	};		
+	
 	function load()
 	{
 		JpUtilsAjax.get({
@@ -134,6 +197,7 @@ $(document).ready(function() {
 				let result = response.RESULT;
 				
 				drawTable(result);
+				drawChart(result);
 			},
 			complete(jqXHR, textStatus) {
 				ProgressBar.hide();
