--- a/src/main/resources/templates/portal/iv/hq/parts/export/report/order/monthly/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/report/order/monthly/list.html
@@ -8,41 +8,52 @@
 	<div class="block-header">
 		<div class="block-title" th:text="#{HQP_T_PARTS_ORDER_REPORT}"></div>
 		<div class="block-button-area">
-			<button id="BTN_search" type="button" th:text="#{HQP_B_SEARCH}"></button>
+			<!-- button id="BTN_search" type="button" th:text="#{HQP_B_SEARCH}"></button -->
 		</div>
 	</div>
 	<div class="split-row"></div>
-	
+
 	<div class="condition-area">
-	<form id="FORM_search" name="FORM_search">
-		<table class="condition table-fixed">
-			<tbody>
-				<tr>
-					<th th:text="#{HQP_L_YEAR}"></th>
-					<td>
-						<select id="pYear" name="pYear" class="custom_ui">
-							<option th:each="year: ${#numbers.sequence(pYear, pYear-1)}" th:value="${year}" th:text="${year}"></option>
-						</select>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-	</form>
+		<form id="FORM_search" name="FORM_search">
+			<table class="condition table-fixed">
+				<tbody>
+					<tr>
+						<th th:text="#{HQP_L_YEAR}"></th>
+						<td>
+							<div class="input-area">
+								<select id="pYear" name="pYear" class="custom_ui">
+									<option th:each="year: ${#numbers.sequence(thisYear, thisYear-1)}" th:value="${year}" th:text="${year}" th:selected="${year}==${pYear}"></option>
+								</select>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<th th:text="#{HQP_L_TYPE}"></th>
+						<td>
+							<div class="input-area">
+								<select id="type" name="type" class="custom-ui">
+									<option value="monthly" selected th:text="#{HQP_L_REPORT_TYPE_MONTHLY}"></option>
+									<option value="order_type" th:text="#{HQP_L_REPORT_TYPE_ORDER_TYPE}"></option>
+								</select>
+							</div>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</form>
 	</div>	
 	
 	<div class="condition-area">
-		<div class="condition-title right">
-		<span th:text="|#{HQP_L_CURR}:|"></span> <span id="curr"></span>
-		</div>
+		<div class="condition-title right"><span th:text="|#{HQP_L_CURR}:|"></span> <span id="curr"></span></div>
 		<table class="condition table-fixed order-report">
 			<thead>
 				<tr><th>&nbsp;</th></tr>
 			</thead>
 			<tbody></tbody>
 		</table>
-		<div class="split-row"></div>
-		<div id="AREA_chart" style="width:60%; margin: auto; "></div>
 	</div>
+	<div class="split-row-compact"></div>
+	<div id="AREA_chart" style="width:60%; margin: auto; "></div>
 	
 <script>
 $(document).ready(function() {
@@ -60,7 +71,7 @@ $(document).ready(function() {
 		thead.push("<tr><th></th>");
 		
 		$.each(column, function(index, item) {
-			thead.push("<th>");
+			thead.push("<th class='center text-ellipsis' title='" + item.CAPTION + "'>");
 			thead.push(item.CAPTION);
 			thead.push("</th>");
 		});
@@ -69,7 +80,7 @@ $(document).ready(function() {
 		
 		$.each(axis, function(index1, item1) {
 			tbody.push("<tr>");
-			tbody.push("<td>" + axis[index1].CAPTION + "</td>");
+			tbody.push("<td class='text-ellipsis' title='" + axis[index1].CAPTION + "'>" + axis[index1].CAPTION + "</td>");
 			
 			$.each(data[index1], function(index2, item2) {
 				let value = item2.VALUE;
@@ -79,8 +90,10 @@ $(document).ready(function() {
 					value = Number(value).toFixed(2);
 				};
 				
-				tbody.push("<td class='right'>");
-				tbody.push(JpUtilsNumber.addComma(value));
+				let formattedValue = JpUtilsNumber.addComma(value);
+				
+				tbody.push("<td class='right text-ellipsis' title='" + formattedValue + "'>");
+				tbody.push(formattedValue);
 				tbody.push("</td>");
 			});
 			
@@ -160,7 +173,7 @@ $(document).ready(function() {
 	function load()
 	{
 		JpUtilsAjax.get({
-			url: "[[${BASE_PATH}]]/report/order/list/data",
+			url: "[[${BASE_PATH}]]/report/order/monthly/list/data",
 			data: {"pYear": $("#pYear").val()},
 			beforeSend: function(jqXHR, settings) {
 				ProgressBar.show();
@@ -185,6 +198,14 @@ $(document).ready(function() {
 	
 	$("#BTN_search").on("click", function() {
 		doSearch();
+	});
+	
+	$("#pYear").on("change", function() {
+		doSearch();
+	});	
+	
+	$("#type").on("change", function() {
+		document.location.href = "[[${BASE_PATH}]]/report/order/" + $(this).val() + "/list?pYear=" + $("#pYear").val();
 	});
 	
 	doSearch();
